<resources>
    <string name="app_name">Travel Guide App</string>

    <string name="error_connection">Unable to fetch data, please check your internet connection and try again.</string>
    <string name="error_service">API service is not responding at the moment, please try again later.</string>
    <string name="error_unknown">Unknown error occurred.</string>

    <string name="retry">Retry</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="trip">Trip</string>
    <string name="guide">Guide</string>

    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="taxi">Taxi</string>
    <string name="next_destination">Where\'s your\nnext destination?</string>
    <string name="deals">DEALS</string>
    <string name="all">All</string>
    <string name="transportations">Transportations</string>

    <string name="where_next">Where next?</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="nearby_attractions">NEARBY ATTRACTIONS</string>

    <string name="trip_plan">Trip Plan</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start Date</string>
    <string name="pick_start_date">Pick a start date</string>
    <string name="end_date">End Date</string>
    <string name="pick_end_date">Pick an end date</string>
    <string name="empty_dates">Set dates to add the trip</string>
    <string name="invalid_dates">Please enter valid dates</string>
    <string name="add_trip">Add Trip</string>

    <plurals name="image_count">
        <item quantity="zero">No image</item>
        <item quantity="one">1 image</item>
        <item quantity="other">%d images</item>
    </plurals>

    <plurals name="trip_length">
        <item quantity="one">1 day trip</item>
        <item quantity="other">%d days trip</item>
    </plurals>

    <string name="might_need_these">MIGHT NEED THESE</string>
    <string name="top_pick_articles">TOP-PICK ARTICLES</string>

    <string name="search_anything">A country, a city, a place… or anything </string>

    <string name="add_bookmark">Add Bookmark</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="error_search_query">Search text must be at least 3 characters long</string>
    <string name="search_results_for">Search results for \"%s\"</string>
    <string name="no_results_found">No results found</string>
</resources>