<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="imageUrl"
            type="String" />

        <variable
            name="label"
            type="String" />

    </data>

    <LinearLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_trip_plan_height">

            <com.google.android.material.imageview.ShapeableImageView
                loadImage="@{imageUrl}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image"
                app:shapeAppearanceOverlay="@style/BottomSheetImageShape" />

            <TextView
                style="@style/Label"
                android:text="@{label}"
                tools:text="LABEL" />

        </FrameLayout>

        <TextView
            style="@style/Subtitle"
            android:text="@string/destination" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_location"
                app:tint="@color/blue4" />

            <Spinner
                android:id="@+id/spDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <TextView
            style="@style/Subtitle"
            android:layout_marginTop="0dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_medium"
            android:fontFamily="@font/source_sans_pro_regular"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/pick_start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:drawableStartCompat="@drawable/ic_outline_calendar"
            app:drawableTint="@color/blue4" />

        <TextView
            style="@style/Subtitle"
            android:layout_marginTop="0dp"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:drawablePadding="@dimen/margin_small"
            android:fontFamily="@font/source_sans_pro_regular"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/pick_end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:drawableStartCompat="@drawable/ic_outline_calendar"
            app:drawableTint="@color/blue4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAddTrip"
            style="@style/AddButton"
            android:text="@string/add_trip" />

    </LinearLayout>

</layout>