<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.borabor.travelguideapp.presentation.ui.search.SearchViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".presentation.ui.search.SearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MainTitle"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/search" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    isVisible="@{viewModel.uiState.success}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/search"
                        layout="@layout/layout_search_bar"
                        app:hint="@{@string/where_next}" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/top_destinations" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvTopDest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingEnd="@dimen/recyclerview_padding_end"
                        android:paddingBottom="@dimen/margin_large"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/nearby_attractions" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvNearby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:clipToPadding="false"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_medium"
                        android:paddingBottom="@dimen/recyclerview_padding_bottom_medium"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

                <include
                    android:id="@+id/apiResponseState"
                    layout="@layout/layout_api_response_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:isError="@{viewModel.uiState.error}"
                    app:isLoading="@{viewModel.uiState.loading}" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>