<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.borabor.travelguideapp.presentation.ui.guide.GuideViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.ui.guide.GuideFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MainTitle"
                android:text="@string/guide" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/might_need_these" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMightNeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_large"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <include
                    layout="@layout/layout_api_response_state"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    app:isError="@{viewModel.travelUiState.error}"
                    app:isLoading="@{viewModel.travelUiState.loading}" />

            </FrameLayout>

            <include
                android:id="@+id/search"
                layout="@layout/layout_search_bar"
                app:hint="@{@string/search_anything}" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_large">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cgCategories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_medium" />

                </HorizontalScrollView>

                <include
                    layout="@layout/layout_api_response_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:isError="@{viewModel.categoryUiState.error}"
                    app:isLoading="@{viewModel.categoryUiState.loading}" />

            </FrameLayout>

            <TextView
                style="@style/Subtitle"
                android:text="@string/top_pick_articles" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopPick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingBottom="112dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <include
                    layout="@layout/layout_api_response_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:isError="@{viewModel.travelUiState.error}"
                    app:isLoading="@{viewModel.travelUiState.loading}" />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>